status_app/k8s/app.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: go-status-code
  labels:
    app: go-status-code
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: go-status-code
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-status-code
  labels:
    app: go-status-code
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-status-code
  template:
    metadata:
      labels:
        app: go-status-code
    spec:
      containers:
      - name: go-status-code
        image: docker.io/danielinclouds/go-status-code:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
